[package]
name = "imoog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
async-trait = "0.1.56"
mongodb = "2.2.2"
anyhow = "1.0.58"
bytes = "1.1.0"
once_cell = "1.12.0"
deflate = "1.0.0"
inflate = "0.4.5"
serde_bytes = "0.11.6"
tracing = "0.1.35"

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["env-filter"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]

[dependencies.axum]
version = "0.5.9"
features = ["multipart", "headers"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp", "tokio-native-tls-comp"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "postgres"]

[dependencies.tower-http]
version = "0.3.4"
features = ["catch-panic"]

[dev-dependencies]
axum-macros = "0.2.3"